New styles no gray

--- a/001 - Basic/original.html
+++ b/001 - Basic/original.html
@@ -9,6 +9,7 @@
 <body>
 
 	<h3>Cards</h3>
+	<p>Original cards below and <a href="inclusive-components.html">inclusive alternative</a></p>
 
 	<ul id="content_listContainer" class="contentListPlain">
 		<li id="contentListItem:_4411275_1" class="clearfix liItem">
