--- a/001 - Basic/inclusive-components.html
+++ b/001 - Basic/inclusive-components.html
@@ -10,7 +10,8 @@
 <body>
   <h1>Inclusive components - cards</h1>
   <p>Adaptation of <a href="https://inclusive-components.design/cards/">Inclusive component's card component</a> 
-  to mirror the <a href="original.html">original card interface</a></p>
+  to mirror <a href="original.html">this original card interface</a></p>
+
 
 	<h2>Cards</h2>
 
